knowledge_base/knowledge/v12/capl/structured/MOST/mostStrictChannelMapping.md
# mostStrictChannelMapping

> Category: `MOST` | Type: `function`

## Syntax

```c
mostStrictChannelMapping ()
```

## Description

The MOST sending and receiving behavior of the node is strictly based on the configuration in the Simulation Setup:

Both Node messages and Spy messages continue to be received, provided that both types are generated by the connected hardware.

This mode is especially useful for nodes that are only connected to one MOST channel in the Simulation Setup. In this mode queries such as the following are omitted in the message handling routines "if (this.MsgChannel!=XY) return;" or else the channel is specified in defining the message handling routines e.g. "on mostMessage MsgChannel1.*".

In many cases the user does not need to allocate the specific channel before sending a message. When a message is created the channel is allocated by a wildcard (0xFFFF) which is mapped to the channel that is connected in the Simulation Setup for sending in this mode. This makes the CAPL code channel-independent, and it is easier to re-use the code.

## Return Values

—

## Availability

| Since Version |
|---|
