knowledge_base/knowledge/v15/capl/structured/MOST/mostStrictChannelMapping.md
# mostStrictChannelMapping

> Category: `MOST` | Type: `function`

## Syntax

```c
mostStrictChannelMapping ();
```

## Description

The MOST sending and receiving behavior of the node is strictly based on the configuration in the Simulation Setup:

Both Node messages and Spy messages continue to be received, provided that both types are generated by the connected hardware.

This mode is especially useful for nodes that are only connected to one MOST channel in the Simulation Setup. In this mode queries such as the following are omitted in the message handling routines "if (this.MsgChannel!=XY) return;" or else the channel is specified in defining the message handling routines e.g. "on mostMessage MsgChannel1.*".

In many cases the user does not need to allocate the specific channel before sending a message. When a message is created the channel is allocated by a wildcard (0xFFFF) which is mapped to the channel that is connected in the Simulation Setup for sending in this mode. This makes the CAPL code channel-independent, and it is easier to re-use the code.

## Return Values

—

## Availability

| CANalyzer | CANoe | CANoe4SW Server Edition (Windows) | CANoe4SW Server Edition (Linux) | CANoe4SW | vTESTstudio |  |
|---|---|---|---|---|---|---|
| Since Version | — | 5.0 | — | — | — | —✔ |
| Restricted To | — | MOST25 MOST50 MOST150 | — | — | — | —✔ |
| CANalyzer Measurement Setup (Transmit Branch) | — | N/A | N/A | N/A | N/A | — |
| CANoe Measurement Setup / CANalyzer Analysis Branch | — | — | — | — | N/A | —✔ |
| CANoe Simulation Setup | N/A | ✔ | — | — | N/A | —✔ |
| CANoe System and Communication Setup | N/A | ✔ | — | — | — | —✔ |
| CANoe Test Setup for Test Modules | N/A | ✔ | — | — | N/A | —✔ |
| CANoe Test Setup for Test Units | N/A | ✔ | — | — | — | —✔ |
| 32-Bit | — | ✔ | — | N/A | — | —✔ |
| 64-Bit | — | ✔ | — | — | — | —✔ |
